tests/vrs/state/parts/registerfield_01_field_info_wrong_expected.txt
error: expected `integer literal`, found `base`
     --> tests/vrs/state/parts/registerfield_01_field_info_wrong.vrs:1:11
      |
    1 |  reg foo [ base, 8, 8] {Layout {}}
      |            ^^^^ help: add `integer literal` here.
